--- a/poem.rmd
+++ b/poem.rmd
@@ -1,6 +1,6 @@
 ---
 title: "git_01"
-author: "Math_116"
+author: "Logan DeHay"
 date: "Fall semester"
 output: html_document
 ---
@@ -15,7 +15,13 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-
+He thought he saw an Elephant  
+That practised on a fife:  
+He looked again, and found it was  
+A letter from his wife.  
+"At length I realise," he said,  
+"The bitterness of Life!"  
+   
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
